Fix text overflow issue in panels

--- a/ui/src/router/components/configuration/components/section.scss
+++ b/ui/src/router/components/configuration/components/section.scss
@@ -1,5 +1,13 @@
 @import "~@elastic/eui/src/global_styling/mixins/typography";
 
+// When text is truncated in a child flex element, the auto-calculated min width is wider than
+// its parent container which can break the layout. To prevent this, the min-width attribute
+// is expected to be set to a fixed value.
+// Ref: https://css-tricks.com/flexbox-truncated-text/
+.euiFlexItem {
+  min-width: 0;
+}
+
 .euiPanel--configSection {
   .euiDescriptionList.euiDescriptionList--responsiveColumn {
     > * {
